Add webpack & webpack dev server & tsloader Move typescript to dev

--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
-  "dependencies": {
-    "typescript": "^3.9.7"
-  }
+  "scripts": {
+    "build": "webpack",
+    "watch": "webpack -w"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "ts-loader": "^8.0.2",
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "private": true
 }
